code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

30-Aug-2010 Andrew Eddie
 # Fixed issue [#21952] JButtonLink does not set toolbar id correctly (Daniel Reibelt, Hannes Papenberg).
 # Fixed issue [#21868] 500 bad query error on saving a template style not assigned to anything (Elin Waring).

29-Aug-2010 Jean-Marie Simonet
 # [#22023] Enlarge inputbox for article title on modal select. 
 # [#22104] hathor col fix. Thanks Bill.

28-Aug-2010 Mark Dexter
 # [#17689] Menu Creation - "Contained in Menu" set to main menu
 # [#21819] Cannot save editted article using frontend with cache enabled

28-Aug-2010 Jean-Marie Simonet
 # [#22048] manager column order inconsistency. Thanks Bill.
 # [#21891] Refactoring Article Options. Thanks Bill.

27-Aug-2010 Mark Dexter
 # Revert issue [#17689] Menu Creation - "Contained in Menu" set to main menu

27-Aug-2010 Jean-Marie Simonet
 # [#22020] Move Template Positions Parameter tp=1 into Template Options from Global Configuration. Thanks Amy, Hannes, Michael.
 $ [#22084] Publishing Options Language changes and inconsistencies. Thanks Bill.

27-Aug-2010 Andrew Eddie
 # Fixed issue [#17689] Menu Creation - "Contained in Menu" set to main menu (Christopher Garvis, Ian MacLennan, Mark Dexter).
 # Fixed issue [#22088] Cannot change default language in Language Manager: Installed Languages view (Michael Babker).
 # Fixed issue [#22054] extra tip in contact form (Brian Teeman, Bill Richardson).
 # Fixed issue [#22043] Manager layout consistency (Brian Teeman, Bill Richardson).
 # Fixed issue [#22055] Email or e-mail inconsistency (Brian Teeman, Bill Richardson).
 # Fixed issue [#20847] Remove _self in mod_random_image (Amy Stephen, Rouven Weßling).
 # Fixed issue [#9627] Installation of admin e-mail with plus symbol not validating (Richard Vazquez, Hannes Papenberg, Christophe Demko, Ian MacLennan).